syntax = "proto3";
package loan_list;
option go_package = "example.com/api/protos/services/loan_list";

import "google/protobuf/empty.proto";  
import "google/protobuf/timestamp.proto";  
import "api/protos/entities/loan/loan.proto";
import "google/api/annotations.proto";


service LoanService {
  // Пример gRPC-метода с HTTP-ручкой (POST /execute)
  rpc Execute (loan.LoanRequest) returns (loan.LoanResult) {
    option (google.api.http) = {
      post: "/execute"  // HTTP-метод и путь
      body: "*"          // Тело запроса (всё сообщение)
    };
  }

  // GET /cache
  rpc Cache (google.protobuf.Empty) returns (loan.CacheResult) {
    option (google.api.http) = {
      get: "/cache" 
    };
  }
}
